@@ -13,7 +13,7 @@ include /usr/share/quilt/quilt.make
 
 name = globus-xio
 _name = globus_xio
-version = 4.11
+version = 4.12
 soname = 0
 
 INSTALLDIR = $(CURDIR)/debian/tmp
