@@ -1,6 +1,6 @@
 AC_PREREQ([2.60])
 
-AC_INIT([globus_xio], [4.11], [https://globus.atlassian.net/])
+AC_INIT([globus_xio], [4.12], [https://globus.atlassian.net/])
 AC_SUBST(MAJOR_VERSION, [${PACKAGE_VERSION%%.*}])
 AC_SUBST(MINOR_VERSION, [${PACKAGE_VERSION##*.}])
 AC_SUBST([AGE_VERSION], [4])
